# SeedCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Config/: link.sh  start.bat
Config/core/test/: config.xml  module.xml
Config/envir/: config.xml
Config/envir/script/: hello.lua  link.lua
Config/envir/script/npc/: xuping.lua
Config/envir/script/test/: errorfunc.lua  exceptionfunc.lua  func.lua
Config/sh/win/: start_test.bat
Public/: LinSys.h  MultiSys.h  MysqlBuilder.cpp  MysqlBuilder.h  TIndexPool.h  Tools.cpp  Tools.h  WinSys.h
Thridlibrary/include/GridSeed/include/: IKernel.h  WinSys.h
Thridlibrary/include/GridSeed/lib/linux/: GridSeed  libtcmalloc_and_profiler.so.4  libunwind-setjmp.so.0  libunwind-x86_64.so.8  libunwind.so.8
Thridlibrary/windows/debug/: GridSeed.lib  hiredis.lib  libtcmalloc_minimal.lib
logic/: CMakeLists.txt
logic/Core/MysqlMgr/: CMakeLists.txt  DBConnection.cpp  DBConnection.h  MysqlBase.cpp  MysqlBase.h  MysqlMgr.cpp  MysqlMgr.h  main.cpp
logic/Core/RedisMgr/: CMakeLists.txt  RedisAsyncCall.cpp  RedisAsyncCall.h  RedisHelper.cpp  RedisHelper.h  RedisMgr.cpp  RedisMgr.h  RedisSyncCall.cpp  RedisSyncCall.h  main.cpp
logic/Core/ScriptEngine/: CMakeLists.txt  LuaInterchange.cpp  LuaInterchange.h  ScriptEngine.cpp  ScriptEngine.h
logic/Interface/: IDataInterchange.h  IMysqlMgr.h  IRedisMgr.h  IScriptEngine.h  IUnitTest.h
logic/Logic/UnitTest/: CMakeLists.txt  MysqlTest.cpp  MysqlTest.h  UnitTest.cpp  UnitTest.h
logic/Logic/UnitTest/unittest/: MysqlTest.cpp  MysqlTest.h  RedisTest.cpp  RedisTest.h  ScriptEngineTest.cpp  ScriptEngineTest.h
